--- a/public/assignment/partials/website/list.html
+++ b/public/assignment/partials/website/list.html
@@ -62,7 +62,7 @@
                     </md-card-content>
                     <md-card-actions layout="row" layout-align="center">
                         <md-button class="md-icon-button md-warn" aria-label="Delete"
-                                   ng-click="ctrl.delete(site._id)">
+                                   ng-click="ctrl.delete(site._id, site.name)">
                             <md-icon>delete</md-icon>
                         </md-button>
                         <span flex></span>
