Page views updated  to use server.

--- a/public/assignment/partials/page/list.html
+++ b/public/assignment/partials/page/list.html
@@ -63,7 +63,7 @@
                     </md-card-content>
                     <md-card-actions layout="row" layout-align="center">
                         <md-button class="md-icon-button md-warn" aria-label="Delete"
-                                   ng-click="ctrl.delete(page._id)">
+                                   ng-click="ctrl.delete(page._id, page.name)">
                             <md-icon>delete</md-icon>
                         </md-button>
                         <span flex></span>
