Widget model and schema finally complete

--- a/public/assignment/partials/widget/edit.html
+++ b/public/assignment/partials/widget/edit.html
@@ -30,12 +30,12 @@
                     </md-menu-content>
                 </md-menu>
                 <h1 class="md-headline">
-                    <span>{{ctrl.websiteName}} > {{ctrl.pageName}} > {{ctrl.widget.widgetType}}</span>
+                    <span>{{ctrl.websiteName}} > {{ctrl.pageName}} > {{ctrl.widget.type}}</span>
                 </h1>
                 <span flex></span>
             </div>
         </md-toolbar>
-        <md-content flex class="md-padding" ng-switch="ctrl.widget.widgetType">
+        <md-content flex class="md-padding" ng-switch="ctrl.widget.type">
             <form name="header" ng-submit="ctrl.save()">
                 <md-button class="md-warn md-raised alxe-button-wide" ng-click="ctrl.delete()">
                     Delete
