--- a/public/assignment/partials/widget/new.html
+++ b/public/assignment/partials/widget/new.html
@@ -45,11 +45,11 @@
                     <p>Label</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item>
+                <md-list-item ng-click="ctrl.new('HTML')">
                     <p>HTML</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
-                <md-list-item>
+                <md-list-item ng-click="ctrl.new('TEXT')">
                     <p>Text Input</p>
                     <md-icon>arrow_forward</md-icon>
                 </md-list-item>
