--- a/public/assignment/partials/widget/list.html
+++ b/public/assignment/partials/widget/list.html
@@ -70,6 +70,21 @@
                             width="{{widget.width}}"
                             frameborder="0" allowfullscreen></iframe>
                 </div>
+                <div ng-switch-when="HTML" ng-bind-html="$sce.trustAsHtml(widget.text)">
+
+                </div>
+                <div ng-switch-when="TEXT" class="alxe-widget-text">
+                    <md-input-container>
+                        <label></label>
+                        <div ng-if="widget.formatted" text-angular
+                             ta-toolbar="[['h1','h2','h3'],['bold','italics','underline','strikeThrough'],['ul','ol'],['justifyLeft','justifyCenter','justifyRight','justifyFull'],['indent','outdent'],['html']]"
+                             ng-model="widget.text"></div>
+                        <input ng-if="!widget.formatted && (!widget.rows || widget.rows===1)"
+                               placeholder="{{widget.placeholder}}"/>
+                        <textarea ng-if="!widget.formatted && (widget.rows > 1)"
+                                  rows="{{widget.rows}}" placeholder="{{widget.placeholder}}">{{widget.text}}</textarea>
+                    </md-input-container>
+                </div>
             </div>
         </md-content>
 </div>
