--- a/public/assignment/partials/widget/edit/html.html
+++ b/public/assignment/partials/widget/edit/html.html
@@ -2,5 +2,5 @@
     <label>Text</label>
     <div text-angular
          ta-toolbar="[['h1','h2','h3'],['bold','italics','underline','strikeThrough'],['ul','ol'],['justifyLeft','justifyCenter','justifyRight','justifyFull'],['indent','outdent'],['html']]"
-         ng-model="widget.text"></div>
+         ng-model="ctrl.widget.text"></div>
 </md-input-container>
