--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -23,7 +23,7 @@
 }
 
 .alxe-widget {
-
+  min-height: 40px;
 }
 
 .alxe-widget img {
@@ -38,6 +38,7 @@
   background: white;
   border-bottom-left-radius: 5px;
   z-index: 10;
+  padding-right:10px;
 }
 
 /* Clever iframe video aspect ratio trick found:
@@ -68,4 +69,9 @@ https://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php*/
 
 .alxe-widget-text md-input-container {
   width:100%;
+}
+
+.alxe-widget-list {
+  list-style-type: none;
+  padding:0;
 }
