--- a/public/assignment/partials/page/new.html
+++ b/public/assignment/partials/page/new.html
@@ -39,9 +39,9 @@
             <form name="newpage" ng-submit="ctrl.save()">
                 <md-input-container class="md-block">
                     <label>Name</label>
-                    <input type="text" name="name" ng-model="ctrl.name">
-                    <div ng-messages ng-show="ctrl.nameWarning">
-                        <div ng-message>{{ctrl.nameWarning}}</div>
+                    <input required type="text" name="name" ng-model="ctrl.name">
+                    <div ng-messages="newpage.name.$error">
+                        <div ng-message>This is required.</div>
                     </div>
                 </md-input-container>
                 <md-input-container class="md-block">
