--- a/public/assignment/partials/page/edit.html
+++ b/public/assignment/partials/page/edit.html
@@ -22,7 +22,7 @@
                         </md-menu-item>
                         <md-menu-divider></md-menu-divider>
                         <md-menu-item>
-                            <md-button class="md-warn" href="#/login">
+                            <md-button class="md-warn" ng-click="$rootScope.logout()">
                                 <md-icon>close</md-icon>
                                 Logout
                             </md-button>
