Facebook auth complete

--- a/public/assignment/partials/user/login.html
+++ b/public/assignment/partials/user/login.html
@@ -12,6 +12,7 @@
             </md-input-container>
             <md-button type="submit" class="md-primary md-raised alxe-button-wide">Login</md-button>
             <md-button class="md-accent md-raised alxe-button-wide" ng-href="#/register">Register</md-button>
+            <md-button class="md-primary alxe-button-wide" ng-href="/auth/facebook">Facebook</md-button>
         </form>
     </md-content>
 </div>
