--- a/public/project/partials/home/arcus.html
+++ b/public/project/partials/home/arcus.html
@@ -2,7 +2,7 @@
     <arc-sidenav></arc-sidenav>
     <div layout="column" flex>
         <arc-menu title="'Home'"></arc-menu>
-        <md-content layout="column" flex>
+        <md-content layout="column" layout-padding flex>
             <h1 class="md-display-4">Arcus</h1>
             <h2 class="md-headline">Linking discord bots to humanity.</h2>
         </md-content>
