--- a/public/project/partials/home/arcus.html
+++ b/public/project/partials/home/arcus.html
@@ -1,8 +1,8 @@
 <div layout-padding>
     <h1 class="md-display-4">Arcus</h1>
-    <h2 class="md-headline">Linking discord bots to humanity.</h2>
-    <div layout-lt-md="column" layout="row">
-        <div flex="50">
+    <h2 class="md-headline">Linking discord bots and humanity.</h2>
+    <div layout-lt-md="column" layout-gt-sm="row">
+        <div flex-gt-sm="50">
             <p>Welcome! To the finest gathering of Discord bots you've ever seen (at least I <a
                     ng-href="#/feedback">hope...</a>)!</p>
             <p>Don't know what discord is? Well that's a right shame because Discord is
@@ -16,7 +16,7 @@
                 anything from bringing you the latest weather, to posting the dankest meme, to
                 playing a playlist of music for you in your voice channel.</p>
         </div>
-        <div layout="column" flex="20">
+        <div layout="column" flex-gt-sm="20" layout-align="start center">
             <md-button class="md-raised arc-home-button arc-discord"
                        ng-href="https://discordapp.com/">
                 <img height="40px" src="img/discord-logo.png"/>
