--- a/public/project/partials/user/login.html
+++ b/public/project/partials/user/login.html
@@ -1,10 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div layout-padding>
+    <div layout="column" flex-gt-sm="30">
+        <h1 class="md-display-3">Login</h1>
+        <h2 class="md-headline">Log in with: </h2>
+        <div layout="row">
+            <md-button flex="50" class="md-raised arc-discord"
+                       ng-href="/arcus/auth/discord">
+                <img height="36px" src="img/discord-logo.png"/>
+            </md-button>
+            <md-button flex="50" class="md-primary md-raised"
+                       ng-href="/arcus/auth/facebook">Facebook
+            </md-button>
+        </div>
+        </br>
+        <h2 class="md-headline">Or, if you prefer: </h2>
+        <form name="login" ng-submit="ctrl.login()">
+            <md-input-container class="md-block">
+                <label>Username</label>
+                <input required type="text" required md-no-asterisk name="username"
+                       ng-model="ctrl.user.username">
+                <div ng-messages="login.username.$error">
+                    <div ng-message="required">This is required.</div>
+                </div>
+            </md-input-container>
+            <md-input-container class="md-block">
+                <label>Password</label>
+                <input required type="password" required md-no-asterisk name="password"
+                       ng-model="ctrl.user.password">
+                <div ng-messages="login.password.$error">
+                    <div ng-message="required">This is required.</div>
+                </div>
+            </md-input-container>
+            <div layout="row">
+                <md-button flex="50" type="submit" class="md-primary md-raised">
+                    Login
+                </md-button>
+                <md-button flex="50" class="md-accent md-raised"
+                           ng-href="#/register">Register
+                </md-button>
+            </div>
+        </form>
+    </div>
+</div>
