--- a/public/project/partials/user/profile.html
+++ b/public/project/partials/user/profile.html
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div layout-padding>
+    <div layout="column" flex-gt-sm="30">
+        <h1 class="md-display-3">Profile</h1>
+        <form name="profile" ng-submit="ctrl.update()">
+            <h2 class="md-headline">User Info</h2>
+            <div layout="row">
+                <span>Username: </span>
+                <span ng-model="ctrl.user.username"></span>
+            </div>
+            <div layout="row">
+                <md-input-container class="md-block">
+                    <label>First Name</label>
+                    <input type="text" name="firstName"
+                           ng-model="ctrl.user.firstName">
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Last Name</label>
+                    <input type="text" name="lastName"
+                           ng-model="ctrl.user.lastName">
+                </md-input-container>
+            </div>
+            <h2 class="md-headline">Discord Info</h2>
+            <div layout="row">
+                <span>Username: </span>
+                <span ng-model="ctrl.user.discord.username"></span>
+                <span>Discriminator: </span>
+                <span ng-model="ctrl.user.discord.discriminator"></span>
+            </div>
+            <div layout="row">
+                <md-button flex="50" type="submit" class="md-accent md-raised">
+                    Update
+                </md-button>
+                <md-button flex="50" class="md-warn" ng-click="ctrl.logout()">
+                    Logout
+                </md-button>
+            </div>
+        </form>
+    </div>
+</div>
