--- a/public/project/partials/user/register.html
+++ b/public/project/partials/user/register.html
@@ -1,10 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div layout-padding>
+    <div layout="column" flex-gt-sm="30">
+        <h2 class="md-headline">Log in with: </h2>
+        <div layout="row">
+            <md-button flex="50" class="md-raised arc-discord"
+                       ng-href="/arcus/auth/discord">
+                <img height="36px" src="img/discord-logo.png"/>
+            </md-button>
+        </div>
+        </br>
+        <h2 class="md-headline">Or, if you prefer: </h2>
+        <form name="registerForm" ng-submit="ctrl.register()">
+            <md-input-container class="md-block">
+                <label>Username</label>
+                <input required type="text" required md-no-asterisk name="username"
+                       ng-model="ctrl.user.username">
+                <div ng-messages="registerForm.username.$error">
+                    <div ng-message="required">This is required.</div>
+                </div>
+            </md-input-container>
+            <md-input-container class="md-block">
+                <label>Password</label>
+                <input required type="password" required md-no-asterisk name="password"
+                       ng-model="ctrl.user.password">
+                <div ng-messages="registerForm.password.$error">
+                    <div ng-message="required">This is required.</div>
+                </div>
+            </md-input-container>
+            <md-input-container class="md-block">
+                <label>Confirm Password</label>
+                <input required type="password" required md-no-asterisk name="confirmPassword"
+                       ng-model="ctrl.user.confirmPassword">
+                <div ng-messages="registerForm.confirmPassword.$error">
+                    <div ng-message="required">This is required.</div>
+                </div>
+                <div class="md-input-message-animation" style="opacity: 1; margin-top: 0px;"
+                     ng-if="ctrl.confirmPasswordErr">Passwords must match.
+                </div>
+            </md-input-container>
+            <div layout="row">
+                <md-button flex="50" type="submit" class="md-primary md-raised">
+                    Register
+                </md-button>
+            </div>
+        </form>
+    </div>
+</div>
