--- a/public/project/css/arc-style.css
+++ b/public/project/css/arc-style.css
@@ -19,15 +19,11 @@ arc-footing div{
 }
 
 .arc-sidenav {
-  max-width: 250px;
+  max-width: 225px;
 }
 
 .arc-list {
 
-}
-
-.arc-list md-list-item {
-  height:22px;
 }
 
 .arc-home-button {
@@ -47,3 +43,29 @@ arc-footing div{
   color : rgb(187, 187, 187);
   background-color: rgba(230, 230, 229, 0.96);
 }
+
+md-list {
+  padding-top:0;
+}
+
+md-list-item {
+  height:0 !important;
+}
+.arc-md-list-item div {
+  height:100% !important;
+}
+
+.arc-discord-profile {
+  min-height:64px !important;
+  background-color: #282b30;
+  color: #FFFFFF !important;
+}
+
+.arc-discord-profile h3{
+  color: #FFFFFF !important;
+}
+
+.arc-discord-profile p{
+  color: #777777 !important;
+}
+
