--- a/public/project/partials/user/profile.html
+++ b/public/project/partials/user/profile.html
@@ -1,8 +1,8 @@
 <div layout-padding>
-    <div layout="column" flex-gt-sm="30">
+    <md-list layout="column" flex-gt-sm="30">
         <form name="profile" ng-submit="ctrl.update()">
             <h2 class="md-headline">User Info</h2>
-            <div layout="row" ng-if="!ctrl.user.discord.user">
+            <div layout="row" ng-if="!ctrl.user.discord.username">
                 <span>Username: </span>
                 <span>{{ctrl.user.username}}</span>
             </div>
@@ -19,9 +19,16 @@
                 </md-input-container>
             </div>
             <h2 class="md-headline">Discord Info</h2>
-            <div layout="row" layout-align="center center">
-                    <span>{{ctrl.user.discord.username}} #{{ctrl.user.discord.discriminator}}</span>
-            </div>
+            <md-list>
+                <md-list-item class="md-2-line arc-discord-profile">
+                    <img class="md-avatar"
+                         src="https://cdn.discordapp.com/avatars/{{currentUser.discord.id}}/{{currentUser.discord.avatar}}.jpg">
+                    <div class="md-list-item-text" layout="column">
+                        <h3>{{ctrl.user.discord.username}}</h3>
+                        <p>#{{ctrl.user.discord.discriminator}}</p>
+                    </div>
+                </md-list-item>
+            </md-list>
             <br/>
             <div layout="row">
                 <md-button flex="50" type="submit" class="md-accent md-raised">
@@ -32,5 +39,5 @@
                 </md-button>
             </div>
         </form>
-    </div>
+</div>
 </div>
