--- a/public/project/partials/user/login.html
+++ b/public/project/partials/user/login.html
@@ -1,5 +1,5 @@
 <div layout-padding>
-    <div layout="column" flex-gt-sm="30">
+    <section class="md-whiteframe-2dp" layout="column" flex-gt-sm="30">
         <h2 class="md-headline">Log in with: </h2>
         <div layout="row">
             <md-button flex="50" class="md-raised arc-discord"
@@ -35,5 +35,5 @@
                 </md-button>
             </div>
         </form>
-    </div>
+    </section>
 </div>
