Got a nice bot list showing now

--- a/public/project/partials/bot/edit.html
+++ b/public/project/partials/bot/edit.html
@@ -39,7 +39,7 @@
                 </md-input-container>
                 <span flex="5"></span>
                 <img class="md-avatar arc-circle-img"
-                     src="https://cdn.discordapp.com/avatars/{{ctrl.bot.discord.id}}/{{ctrl.bot.discord.avatar}}.jpg">
+                     src="https://cdn.discordapp.com/app-icons/{{ctrl.bot.discord.id}}/{{ctrl.bot.discord.avatar}}.jpg">
             </div>
             <br/>
             <div layout="row">
