--- a/public/project/partials/user/view.html
+++ b/public/project/partials/user/view.html
@@ -23,22 +23,13 @@
                 <md-list>
                     <md-list-item class="md-2-line arc-discord-profile">
                         <img class="md-avatar"
-                             src="https://cdn.discordapp.com/avatars/{{currentUser.discord.id}}/{{currentUser.discord.avatar}}.jpg">
+                             src="https://cdn.discordapp.com/avatars/{{ctrl.user.discord.id}}/{{ctrl.user.discord.avatar}}.jpg">
                         <div class="md-list-item-text" layout="column">
                             <h3>{{ctrl.user.discord.username}}</h3>
                             <p>#{{ctrl.user.discord.discriminator}}</p>
                         </div>
                     </md-list-item>
                 </md-list>
-                <br/>
-                <div layout="row">
-                    <md-button flex="50" type="submit" class="md-accent md-raised">
-                        Update
-                    </md-button>
-                    <md-button flex="50" class="md-warn" ng-click="logout()">
-                        Logout
-                    </md-button>
-                </div>
             </form>
         </section>
     </div>
@@ -47,22 +38,17 @@
             <div layout="row" layout-align="start center">
                 <h2 class="md-headline" layout-padding>Their Amazing Bots</h2>
                 <span flex></span>
-                <md-button ng-click="ctrl.newBot()" class="md-raised md-primary" style="height:0">Make a New One
-                </md-button>
             </div>
             <md-content hide show-gt-sm layout="row" flex="100">
                 <div flex="50">
-                    <arc-bot-card  ng-repeat="bot in ctrl.botsLeft" bot="bot"
-                                   elevated="true"></arc-bot-card>
+                    <arc-bot-card  ng-repeat="bot in ctrl.botsLeft" bot="bot"></arc-bot-card>
                 </div>
                 <div flex="50">
-                    <arc-bot-card  ng-repeat="bot in ctrl.botsRight" bot="bot"
-                                   elevated="true"></arc-bot-card>
+                    <arc-bot-card  ng-repeat="bot in ctrl.botsRight" bot="bot"></arc-bot-card>
                 </div>
             </md-content>
             <div hide-gt-sm layout-wrap flex="noshrink">
-                <arc-bot-card flex-gt-sm="50" ng-repeat="bot in ctrl.bots" bot="bot"
-                              elevated="true"></arc-bot-card>
+                <arc-bot-card flex-gt-sm="50" ng-repeat="bot in ctrl.bots" bot="bot"></arc-bot-card>
             </div>
         </section>
     </div>
